// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should open the popover when the display value is clicked 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="chevron-down"
      class="toggle fa fa-chevron-down"
    />
  </button>
  <div />
</div>
`;

exports[`The component should open the popover when the display value is clicked 2`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"backdrop\\"></div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <ul class=\\"menu\\" style=\\"top: 10px; max-height: 0px; position: fixed; pointer-events: auto; left: 10px;\\">
      <li>
        <button class=\\"option icon\\">
          <!-- react-text: 5 -->Option 1
          <!-- /react-text -->
        </button>
      </li>
      <li>
        <button class=\\"option icon\\">
          <!-- react-text: 8 -->Option 2
          <!-- /react-text -->
        </button>
      </li>
      <li class=\\"divider\\"></li>
      <li>
        <button class=\\"option icon\\">
          <!-- react-text: 12 -->Option 3
          <!-- /react-text -->
        </button>
      </li>
    </ul>
  </div>
</div>"
`;

exports[`The component should render with an icon 1`] = `
<div
  class="select"
>
  <button
    class="displayValue hasIcon"
  >
    <span
      aria-label="plus"
      class="frontIcon fa fa-plus"
    />
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="chevron-down"
      class="toggle fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`The component should render with the popover closed 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="chevron-down"
      class="toggle fa fa-chevron-down"
    />
  </button>
</div>
`;
